# horai

./: flake.nix
eunomia/: module.nix  package.nix  pyproject.toml  routine.example.toml
eunomia/eunomia/: __init__.py  __main__.py  app.py  config.py  store.py  template.py
eunomia/tests/: test_store.py  test_template.py
