[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eunomia"
version = "0.1.0"
description = "A routine-keeping personal assistant driven by a Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20",
    "APScheduler>=3",
]

[project.scripts]
eunomia = "eunomia.__main__:main"

[tool.setuptools.packages.find]
include = ["eunomia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode = "standard"  #TODO: bump to "strict" as the codebase gets annotated.
include = ["eunomia", "tests"]
extraPaths = ["."]  # resolve the local `eunomia` package for the test modules
